optimize the speed

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
 RewriteEngine On
+
+# Permanent redirects
+Redirect 301 /exhibition-stand-builder-in-berlin/ /blogs/exhibition-stand-builder-in-berlin/
+Redirect 301 /stand-design-company-germany/ /blogs/stand-design-company-germany/
+
+# Custom 404 handling
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /404/index.html [L]
