--- a/.htaccess
+++ b/.htaccess
@@ -8,9 +8,11 @@ RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [L,R=301]
 Redirect 301 /exhibition-stand-builder-in-berlin/ /blogs/exhibition-stand-builder-in-berlin/
 Redirect 301 /stand-design-company-germany/ /blogs/stand-design-company-germany/
 
-# Custom 404 handling
-RewriteCond %{REQUEST_URI} !^/404/index\.html$ [NC]   # Prevents infinite loop for 404 page
+# Exclude specific file types from 404 rewrite
+RewriteCond %{REQUEST_URI} !\.(jpg|jpeg|png|gif|css|js|ico|svg|woff|woff2|ttf|eot)$ [NC]
+
+# Prevent infinite loop for 404 page
+RewriteCond %{REQUEST_URI} !^/404/index\.html$ [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /404/index.html [L]
-
